force-app/main/default/objects/Referentiel_convention__c/Referentiel_convention__c.object-meta.xml
<CustomObject>
    <label>Référentiel convention</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom du modèle de convention</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiel convention</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>