force-app/main/default/objects/Referentiel_convention__c/fields/Referentiel_Panel__c.field-meta.xml
<CustomField>
    <fullName>Referentiel_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel Panel</label>
    <referenceTo>Referentiel_Panel__c</referenceTo>
    <relationshipLabel>Référentiel convention</relationshipLabel>
    <relationshipName>Referentiel_convention</relationshipName>
    <type>Lookup</type>
</CustomField>