force-app/main/default/objects/Referentiel_convention__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>Si la date de fin est supérieure à la date d’aujourd’hui, le statut passe à « inactif »</description>
    <formula>IF( AND(Date_de_debut__c &lt;= TODAY(), OR(TODAY() &lt;= Date_de_fin__c,  ISNULL(Date_de_fin__c) )), &apos;Actif&apos;, &apos;Inactif&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>