force-app/main/default/objects/Referentiel_convention__c/fields/Type_de_la_convention__c.field-meta.xml
<CustomField>
    <fullName>Type_de_la_convention__c</fullName>
    <label>Type de la convention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Foyer</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Individu</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Routeur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>