force-app/main/default/objects/Referentiel_convention__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>2</length>
    <type>Text</type>
</CustomField>