force-app/main/default/objects/Referentiel_convention__c/validationRules/RV01_RC_DateDebut_Avant_DateDeFin.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_RC_DateDebut_Avant_DateDeFin</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
				 Date_de_fin__c &lt;  Date_de_debut__c 
				)</errorConditionFormula>
    <errorMessage>La date de début doit être antérieure la date de fin</errorMessage>
</ValidationRule>