force-app/main/default/objects/Referentiel_convention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les référentiels convention</label>
</ListView>